tests/paczka1/fuzzy1/11253605.err
Error in line 14: S807 A678 0,0
Error in line 15: S807 S623 65,1
Error in line 37: Fy8s S623 78,6
